[SC-4747] fixed header z-index

--- a/src/app/shared/layout/header.component.less
+++ b/src/app/shared/layout/header.component.less
@@ -1,5 +1,5 @@
 :host {
-  z-index: 2;
+  z-index: 3;
 }
 .logo-layout {
     max-width: 200px;
@@ -91,7 +91,7 @@
   	&:hover {
   		opacity: 0.5
   	}
-  }  
+  }
 
   .page-logo {
     float: left;
